# Fern

./: .gitignore  CMakeLists.txt  README.md
FernCloudServer/: index.js  package-lock.json  package.json  upload.py
FernUI/: App.xaml  App.xaml.cs  CloudService.cs  FernUI.csproj  FernUI.slnx  MainWindow.xaml  MainWindow.xaml.cs  MemoryCleanup.cs  Package.appxmanifest  StudioExportService.cs  StudioLufsService.cs  app.manifest
FernUI/Models/: AiAnalysisService.cs  ClipLibraryService.cs  ClipModel.cs  MicrophoneDeviceService.cs  SettingsService.cs
FernUI/Views/: CloudPage.xaml  CloudPage.xaml.cs  CloudSharesPage.xaml  CloudSharesPage.xaml.cs  GalleryPage.xaml  GalleryPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  StudioPage.xaml  StudioPage.xaml.cs
include/fern/: audio_activity.h  buffer.h  capture.h  capture_feedback.h  capture_session.h  clock.h  dump.h  encoder.h  hotkey.h  ipc_server.h  isolatedAudioCapture.h  logger.h  multi_app_audio_capture.h  replay_export.h  settings.h
ship/: README.md  build-ship.ps1
src/: buffer.cpp  capture.cpp  capture_feedback.cpp  capture_session.cpp  clock.cpp  dump.cpp  encoder.cpp  hotkey.cpp  ipc_server.cpp  isolatedAudioCapture.cpp  logger.cpp  main.cpp  multi_app_audio_capture.cpp  replay_export.cpp  settings.cpp
